Kept just the important stuff on my homepage

--- a/gallery.yml
+++ b/gallery.yml
@@ -1,13 +1,7 @@
-- title: fast.ai
-  subtitle: Documenting my deep learning journey
+- title: Data Science
+  subtitle: Documenting my learning journey
   path: https://youtube.com
-  image: images/fastai.jpg
-- title: IIT Madras
-  subtitle: University Life 
-  image: images/iitm.jpg
-- title: Youngistaan Foundation
-  subtitle: Diary of an Ed-volunteer
-  image: images/tyf.jpg
+  image: images/ds.jpg
 - title: Personal
   subtitle: A place where I don't have to be bounded by confirmity.
   image: images/personal.jpg
