Changes to appearance

--- a/gallery.yml
+++ b/gallery.yml
@@ -1,6 +1,6 @@
-- title: Data Science
+- title: Deep Learning
   subtitle: Documenting my learning journey
-  image: images/ds.jpg
+  image: images/ai.jpg
   path: https://zed4zee.github.io/learning-ai
 - title: Personal
   subtitle: A place where I don't have to be bounded by confirmity.
